udpate script (+12 squashed commits) Squashed commits: [5d88cbc122] udpate script [af877d7776] add git clone [1eea33ff38] add script [ed95abc99f] fix link [a5b447d847] fix link [434d6b3cb9] fix format [0aad46f3ff] fix format [791a1b6fa5] update [5bb05dae72] update [762ae52c96] delete unused allcoredev [2fdd6cb797] discard [11480cf287] delete (+1 squashed commit) Squashed commits: [38bc6b7702] dd (+3 squashed commits) Squashed commits: [6b6c3c9002] discard [063a20301c] update readme [5d821cad1f] ok